objects/Business_Category__c.object
<CustomObject>
    <description>This is the control list of Business Categories per show</description>
    <fields>
        <fullName>Business_Category_Code__c</fullName>
        <label>Business Category Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Show__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Show</label>
        <referenceTo>Show__c</referenceTo>
        <relationshipLabel>Business Categories</relationshipLabel>
        <relationshipName>Business_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Business Category</label>
    <nameField>
        <label>BusinessCategoryKey</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>